align-fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -88,6 +88,11 @@
     z-index: -2;
 }
 
+.hero-content {
+    max-width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 .hero-container {
     width: 675px;
@@ -128,7 +133,7 @@
 .hero .button {
     font-size: 11px;
     line-height: 15px;
-    padding: 17px 45px 18.65px 44px;
+    padding: 20px 45px 17.65px 43px;
     margin-top: 23px;
     margin-right: 17px;
 }
@@ -143,7 +148,7 @@
     border: 1px solid #FFFFFF;
     cursor: pointer;
     background-color: rgba(0, 0, 0, 0);
-    padding: 16px 29px 18px 29px;
+    padding: 17px 29px 17px 29px;
     margin-top: 23px;
 }
 
@@ -151,8 +156,13 @@
     background-color: #131313;
 }
 
-.completed-projects {
+.projects-content {
     max-width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.completed-projects {    
     display: flex;
     margin-left: 134px;
     padding-bottom: 408px;
@@ -271,16 +281,12 @@
     padding-bottom: 7px;
 }
 
-.online-control {
-    background-color: #FFFFFF;
-}
-
 .online-control-content {
-    margin-left: 20px;
     max-width: 1440px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    padding-left: 20px;
 }
 
 .online-control-head {
@@ -296,6 +302,7 @@
 .videocamera-logo {
     display: flex;
     margin-top: 12px;
+    justify-content: center;
 }
 
 .videocamera-logo img {
@@ -304,16 +311,15 @@
 
 .online-control-video {
     margin-top: 30px;
-    position: relative;
-    z-index: 0;
 }
 
 .image-video-overlay {
     content: '';
-    width: 100%;
+    width: 817px; 
     height: 435px;
     position: absolute;
     margin-top: -440px;
+    margin-left: 293px;
     background-color: rgba(0,0,0,0.8);
     z-index: 1;
 }
@@ -321,7 +327,7 @@
 .image-video-play {
     position: absolute;
     z-index: 2;
-    margin-left: 333px;
+    margin-left: -73px;
     margin-top: -290px;
 }
 
@@ -333,32 +339,35 @@
     margin-top: 57px;
 }
 
-.online-control-text {
-    margin-top: 28px;
+.online-control-text_block {
+    margin-top: 22px;
     max-width: 681px;
-    text-align: center;
     font-family: NunitoSans;
     font-weight: 400;
     font-size: 18px;
     line-height: 37px;
     color: #363636;
-    margin-bottom: 83px;
-    /* padding-left: 18px; */
+    margin-bottom: 81px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .name-block {
     margin-right: 58px;
+    margin-top: 2px;
     padding-left: 18px;
 }
 
 .phone-block {
     margin-right: 49px;
+    margin-top: 2px;
 }
 
 .personal-information {
     display: flex;
     justify-content: center;
-    margin-bottom: 27px;
+    margin-bottom: 32px;
+    margin-left: -19px;
 }
 
 .personal-information-text {
@@ -367,6 +376,7 @@
     font-size: 13px;
     line-height: 17px;
     color: rgba(54, 54, 54, 0.5);
+    text-align: left;
 }
 
 .input-text {
@@ -385,7 +395,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 3px;
+    margin-left: -7px;
 }
 
 .checkbox-input {
